fix: update the parameters so you can handle the distribution with a single path parameter
